Tue Jun  5 16:49:13 2007                        Michael Jennings (mej)

Hopefully this will fix mzimport for Subversion.
----------------------------------------------------------------------
Tue Jun  5 17:14:23 2007                        Michael Jennings (mej)

One more touchup for svn import.
----------------------------------------------------------------------
Wed Jun 20 23:17:25 2007                        Michael Jennings (mej)

Don't allow errors in the perl invocation to screw up the values
obtained for %{perl_vendorlib}.
----------------------------------------------------------------------
Sun Jun 24 12:24:08 2007                        Michael Jennings (mej)

More mzimport fixes for SVN.
----------------------------------------------------------------------
Tue Jul  3 20:56:20 2007                        Michael Jennings (mej)

Get buildroot pkgvar properly.
----------------------------------------------------------------------
Mon Nov  5 00:04:22 2007                        Michael Jennings (mej)

Fix mzsync and mzclean with Subversion.
----------------------------------------------------------------------
Tue Nov 20 13:48:39 2007                        Michael Jennings (mej)

Kernel module spec template improvements.
----------------------------------------------------------------------
Mon Nov 26 14:38:40 2007                        Michael Jennings (mej)

Add version to depmod command in kernel templates.
----------------------------------------------------------------------
Thu Dec  6 22:31:13 2007                        Michael Jennings (mej)

Fix import for SVN:  when importing, always use the current directory,
not the supplied package, for auto-detecting the SCM type.
----------------------------------------------------------------------
Sat Jun 14 10:35:17 2008                        Michael Jennings (mej)

Changes required for use with RPM version 5 and higher.
----------------------------------------------------------------------